# MSC-Thesis

./: .gitignore  guardrail_test_suite.md  notes.md  report_material_log.md  todos.md
jupiter-agent/: CLAUDE.md  dump_tool_schemas.py  pyproject.toml  tool_schemas.json  verify_tools_direct.py
jupiter-agent/.claude/: settings.local.json
jupiter-agent/docs/: eval_cases_guardrail.json  eval_cases_guardrail_results_20260703_134202.json  eval_cases_guardrail_results_20260703_134202.md  eval_cases_guardrail_results_20260703_201948.json  eval_cases_guardrail_results_20260703_201948.md  eval_cases_guardrail_results_20260703_204117.json  eval_cases_guardrail_results_20260703_204117.md  eval_cases_smoketest.json  eval_cases_smoketest_results_20260703_200345.json  eval_cases_smoketest_results_20260703_200345.md  eval_cases_smoketest_results_20260703_201246.json  eval_cases_smoketest_results_20260703_201246.md  eval_cases_smoketest_results_20260703_203839.json  eval_cases_smoketest_results_20260703_203839.md  system_prompt.md
jupiter-agent/src/pg_mcp/: agent_core.py  app.py  client.py  database.py  eval_runner.py  schemas.py  server.py
old_queries/: borehole_schema.txt  bundled_output.txt  compoundlist_schema.txt  grwchemanalysis_schema.txt  query_rs_PFAS_limits.txt  query_rs_activePublicWaterworks.txt  query_rs_borehole.txt  query_rs_code1.txt  query_rs_code_752.txt  query_rs_codetypeTable.txt  query_rs_codetypeforintake.txt  query_rs_compound_limits.txt  query_rs_compoundgroup_columns.txt  query_rs_compoundlist_NITRAT.txt  query_rs_compoundlist_PFAs.txt  query_rs_join.txt  (+18 more)
(+2 files in other folders)
