[project]
name = "jupiter-agent"
version = "0.1.0"
description = "LLM-powered agent for Danish drinking water quality queries via the Jupiter database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "mcp[cli]>=1.26.0",
    "anthropic>=0.25.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "streamlit>=1.58.0",
]

[project.scripts]
jupiter-mcp = "src.pg_mcp.server:mcp"

[tool.uv]
package = true
